[tool.poetry]
name = "repl_python3_beta_srs-pandas-2-s22-sophiegao22"
version = "0.1.0"
description = ""
authors = ["sophiegao22 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
